# ecom_voice_agent

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  reproduce_audio.py  reproduce_vision.py
src/agent/: main.py
src/agent/my_agent/: agent.py  tools.py
src/frontend/: package-lock.json  package.json
src/frontend/public/: recorder-worklet.js
src/frontend/src/app/: page.tsx
src/frontend/src/components/: CheckoutView.tsx  LiveAssistant.tsx  ProductCard.tsx  ProductGrid.tsx
src/frontend/src/context/: StoreContext.tsx
src/frontend/src/data/: inventory.json
src/frontend/src/hooks/: useAgentSocket.ts
src/frontend/src/types/: index.ts
